<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.polyak.iconswitch.IconSwitch
        android:id="@+id/icon_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:isw_icon_left="@drawable/ic_feed_red"
        app:isw_icon_right="@drawable/ic_far_blue"
        app:isw_thumb_color_left="#fff"
        app:isw_thumb_color_right="#fff"
        app:isw_active_tint_icon_left="#FF3A57"
        app:isw_active_tint_icon_right="#3A6EF7"
        app:isw_inactive_tint_icon_left="#888"
        app:isw_inactive_tint_icon_right="#888"
        app:isw_background_color="#BFBFC1"
        app:isw_icon_size="20dp"
        app:isw_default_selection="left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/layout_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/layout_caption"
        android:textColor="@color/colorActiveText"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/layout_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/layout_description"
        android:textColor="@color/colorNotActiveText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_caption"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/layout_image"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:background="@drawable/love_is"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_description"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/layout_button"
        style="@style/Widget.AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_button"
        app:layout_constraintTop_toBottomOf="@+id/layout_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>